# projekt_zespolowy

./: CMakeLists.txt  Course.cpp  Course.h  Department.cpp  Department.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  University.cpp  University.h  interface.cpp  interface.h  main.cpp  test.cpp  test.h
projekt_zespolowy/: Course.cpp  Course.h  Department.cpp  Department.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  University.cpp  University.h  interface.cpp  interface.h  main.cpp  projekt_zespolowy16.05.uml
